--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EdgeMind AI | Embedded Intelligence Solutions</title>
+    <title>Ephemeral.ai | Embedded Intelligence Solutions</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
         <div class="nav-container">
             <a href="#" class="logo">
                 <span class="logo-icon">◈</span>
-                EdgeMind
+                Ephemeral.ai
             </a>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
@@ -43,7 +43,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-badge">Edge AI Solutions</div>
-            <h1>Intelligence at the Edge</h1>
+            <h1>Ephemeral now, a norm later ;)</h1>
             <p>We deploy custom AI solutions directly onto microcontrollers, bringing machine learning to your products without cloud dependency.</p>
             <div class="hero-cta">
                 <a href="#contact" class="btn btn-primary">Start Your Project</a>
@@ -284,7 +284,7 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <span class="contact-label">Email</span>
-                            <a href="mailto:hello@edgemind.ai">hello@edgemind.ai</a>
+                            <a href="mailto:hello@ephemeral.ai">hello@ephemeral.ai</a>
                         </div>
                         <div class="contact-item">
                             <span class="contact-label">Location</span>
@@ -322,9 +322,9 @@
                 <div class="footer-brand">
                     <a href="#" class="logo">
                         <span class="logo-icon">◈</span>
-                        EdgeMind
+                        Ephemeral.ai
                     </a>
-                    <p>Bringing intelligence to the edge, one microcontroller at a time.</p>
+                    <p>Ephemeral now, a norm later.</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-col">
@@ -342,7 +342,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 EdgeMind AI. All rights reserved.</p>
+                <p>&copy; 2025 Ephemeral.ai. All rights reserved.</p>
             </div>
         </div>
     </footer>
