--- a/index.html
+++ b/index.html
@@ -320,6 +320,17 @@
                         <label for="company">Company</label>
                         <input type="text" id="company" name="company" placeholder="Acme Inc.">
                     </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" placeholder="john@example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone</label>
+                            <input type="tel" id="phone" name="phone" placeholder="+1 234 567 8900">
+                        </div>
+                    </div>
+                    <p class="form-hint" id="contactHint">Please provide at least an email or phone number</p>
                     <div class="form-group">
                         <label for="message">Project Details</label>
                         <textarea id="message" name="message" rows="4" placeholder="Tell us about your use case, target hardware, and timeline..."></textarea>
